Update: добавлен фейк-аккаунт @cuute_kira; изменён вебинар на СНОВИДЕНИЯ ч.1; настроены прямые ссылки на каналы

--- a/app.env.example
+++ b/app.env.example
@@ -1,4 +1,3 @@
 # Переименуйте в .env и заполните значениями
 BOT_TOKEN=
-PURCHASE_LINK=https://example.com/purchase
-HALF_WEBINAR_LINK_TEMPLATE=https://example.com/{webinar}-half
+FAKE_ACCOUNT=@cuute_kira
