--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 BOT_TOKEN=8366744937:AAEWlPJyD-NFzexuj3e5EI2-1lHgKviEI_4
-PURCHASE_LINK=https://example.com/purchase
-HALF_WEBINAR_LINK_TEMPLATE=https://example.com/{webinar}-half
+FAKE_ACCOUNT=@cuute_kira
